# SamplesCPP

./: .gitignore  GCC  gcc_rules.txt  myString.cpp
Chrono/: chrono.cpp
Classes/: 2017 - MyStringClass.cpp  2017 - WrappedInt.cpp
Classes/2020 - MyStringClass/: MyString.cpp  MyString.h  main.cpp
Mayers/: operator_inc.cpp  operator_inc2.cpp  shared_count.cpp
Mayers55/: operator_inc.cpp  shared_count.cpp
STL/: 2_1_reverse.cpp  2_2_1_find_algorithm.cpp  2_2_2_merge_back_inserter.cpp  2_3_accumulate.cpp  4_14_set_iter.cpp  4_15_remove_erase.cpp  4_2_1_replace.cpp  4_2_copy.cpp  4_5_free_access_iterators.cpp  4_7_Insert_iterators.cpp  4_9_search.cpp  5_1_algo_base.cpp  5_2_1_find.cpp  5_2_2_find_if.cpp  dictionary_counter.cpp  find_unique_xor.cpp
STL/article 1/: reverse_algorithm.cpp  simple_strings.cpp  sort_predicate.cpp  template.cpp
SapLessons/: 2019 - Unsorted.txt  Algorithms.cpp  GoodSamples.txt  UglySamples.txt  gccSimple.txt  inputOutputNotes.txt
SapLessons/12.11.2019 - Курсовая/: st_solve_gauss.cpp  st_syst.cpp  Шаблон_3стержня.xls
SapLessons/2019_Coursework/: st_solve_gauss.cpp  st_syst.cpp
SapLessons/2022/: git.pptx
SapLessons/2023/Lesson08 - String class/CustomString/: CMakeLists.txt
SapLessons/2023/Lesson08 - String class/CustomString/customString/include/: CustomString.h
SapLessons/2023/Lesson08 - String class/CustomString/customString/source/: CustomString.cpp  main.cpp
SapLessons/2023/Lesson08 - String class/CustomString/customString/test/: CMakeLists.txt
SapLessons/2023/Lesson08 - String class/CustomString/customString/test/source/: main.cpp
SapLessons/Lesson01/: gccSimple.txt
SapLessons/Lesson02/: 01_format.cpp  (+1 more)
Templates/: 01_easy_sample.cpp  02_template_override.cpp  03_template_pair.cpp  04_print_collection.cpp  04_simple_classes.cpp  05_print_collection.cpp  05_temp_foreach.cpp  06_temp_compare_op.cpp  06_temp_foreach.cpp  07_temp_compare_op.cpp
(+171 files in other folders)
